--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </style>
 </head>
 <body>
+    <a href="https://hugosik.github.io/odwolywanie-do-arkuszy-semantycznych/">Wróć</a>
 <section id="calosc">   
 <header>
     Blok nagłówkowy
@@ -61,4 +62,5 @@
     </div>
 </body>
 </html>
+
 
